Add Java 11 profile.